# pragmatic-programming-agent

./: .gitignore  README.md  pyproject.toml
.bob/skills/fix-issues/: SKILL.md  fetch-issues.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: agent_fix.py
.github/workflows/: auto-fix.yml
finutils/: bill.py  currency.py  interest.py  payment.py  tax.py
finutils.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_bill.py  test_currency.py  test_interest.py  test_payment.py  test_tax.py
